# spright

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  THIRD-PARTY.md  cpp_header.template  phaser.template  phaser2.template
.github/workflows/: build.yml
docs/: compact.conf  spright.conf  spright.h  spright.json
extra/chocolatey/: spright.nuspec
extra/chocolatey/tools/: chocolateyinstall.ps1
libs/chipmunk/src/: cpHastySpace.c
libs/humus/: ConvexHull.cpp  ConvexHull.h  MyMath.h  Vector.cpp  Vector.h  humus.cpp  humus.h
libs/inja/: inja.hpp
libs/miniz/: miniz.c
libs/nlohmann/: json.hpp
libs/rbp/: MaxRectsBinPack.cpp  MaxRectsBinPack.h  Rect.h
libs/rect_pack/: MaxRectsBinPack.cpp  rect_pack.cpp
libs/rmj/: rmj_texbleed.h
libs/stb/: stb_image_write.h  stb_impl.c  stb_impl.cpp
libs/texpack/: packer.cpp  packer.h
libs/utf8_console/: README.md  utf8_console.cpp
src/: Color.h  Definition.cpp  Definition.h  FilenameSequence.h  InputParser.cpp  InputParser.h  Rect.cpp  Rect.h  Scheduler.h  common.cpp  common.h  compacting.cpp  compacting.h  debug.cpp  debug.h  globbing.cpp  globbing.h  image.cpp  image.h  image_draw.cpp  image_io.cpp  input.cpp  input.h  main.cpp  output.cpp  output.h  output_description.cpp  output_texture.cpp  pack.cpp  pack.h  pack_binpack.cpp  pack_compact.cpp  pack_keep.cpp  pack_layers.cpp  pack_lines.cpp  pack_origin.cpp  pack_single.cpp  packing.cpp  packing.h  settings.cpp  (+6 more)
templates/: cocos2dx.inja  cpp.inja  cpp.template  phaser.inja  phaser.template  phaser2.inja  phaser2.template  pixijs.inja
test/: Items.png.inc  catch.cpp  catch.hpp  cpp_header.template  packing.cpp  performance.cpp  scope.cpp  spright.conf  spright.h  spright.txt  test-autocompletion.cpp  test-common.cpp  test-globbing.cpp  test-packing.cpp  test-performance.cpp  test-pivot.cpp  test-scope.cpp  test-templates.cpp  update.sh
